fix: change type to system

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,6 +2,6 @@
   name:  Jupyter Output Scrubber
   description: This hook removes all jupyter notebook(s) outputs in a given directory.
   entry: "jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace"
-  language: script
+  language: system
   files: \.ipynb$
   stages: [commit]
